crash in cmovP_cmpP_zero_zeroNode::bottom_type()

XMLWordPrintable

    • b20
    • other
    • linux

      When I implement a new match under MIPS64 and Loongarch64architecture

      match(Set dst (CMoveP (Binary cop (CmpP op1 zero)) (Binary dst zero)));

      this means right child of CmpP is immediate zero and right child of CmovP also is immediate zero, then an exception will occur:
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x000000fff410fcc4, pid=11130, tid=11146
      #
      # JRE version: OpenJDK Runtime Environment (17.0) (build 17-internal+0-jenkins-slave-20210821140615-jdk-ls-a526852e137)
      # Java VM: OpenJDK 64-Bit Server VM (17-internal+0-jenkins-slave-20210821140615-jdk-ls-a526852e137, compiled mode, compressed oops, compressed class ptrs, g1 gc, linux-loongarch64)
      # Problematic frame:
      # V [libjvm.so+0x21fcc4] cmovP_cmpP_zero_zeroNode::bottom_type() const+0x44
      #
      # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #


            Assignee:
            Sun Guoyun
            Reporter:
            Sun Guoyun
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: