8273317: crash in cmovP_cmpP_zero_zeroNode::bottom_type()